@@ -990,9 +990,10 @@
     <branch id="gnome-2-20" stringfrozen="true"/>
   </module>
   <module id="gnome-terminal">
-    <branch id="HEAD" stringfrozen="true"/>
+    <branch id="HEAD"/>
     <branch id="gnome-2-14" stringfrozen="true"/>
     <branch id="gnome-2-16" stringfrozen="true"/>
+    <branch id="gnome-2-20" stringfrozen="true"/>
   </module>
   <module id="gnome-themes">
     <branch id="HEAD"/>
