@@ -400,7 +400,7 @@
       <module id="gnome-session" branch="gnome-2-18"/>
       <module id="gnome-system-monitor" branch="gnome-2-18"/>
       <module id="gnome-system-tools" branch="gnome-2-18"/>
-      <module id="gnome-terminal"/>
+      <module id="gnome-terminal" branch="gnome-2-20"/>
       <module id="gnome-themes" branch="gnome-2-18"/>
       <module id="gnome-user-docs"/>
       <module id="gnome-utils" branch="gnome-2-18"/>
@@ -497,7 +497,7 @@
       <module id="gnome-session" branch="gnome-2-20"/>
       <module id="gnome-system-monitor" branch="gnome-2-20"/>
       <module id="gnome-system-tools" branch="gnome-2-20"/>
-      <module id="gnome-terminal"/>
+      <module id="gnome-terminal" branch="gnome-2-20"/>
       <module id="gnome-themes" branch="gnome-2-20"/>
       <module id="gnome-user-docs"/>
       <module id="gnome-utils" branch="gnome-2-20"/>
